tests/ok/prelude-maybe-alias.ari
use std as core;

fn maybe(flag: bool) -> Maybe[i64] {
  if flag {
    return Some(10);
  }
  return None<i64>();
}

fn bump(value: Maybe[i64]) -> Maybe[i64] {
  let inner = value?;
  return Some(inner + 1);
}

fn qualified(flag: bool) -> std::Maybe[i64] {
  if flag {
    return std::Some(3);
  }
  return std::None<i64>();
}

fn aliased(flag: bool) -> core::Maybe[i64] {
  if flag {
    return core::Some(5);
  }
  return core::None<i64>();
}

fn main() -> i64 {
  return (bump(maybe(true)) ?? 0) +
         (maybe(false) ?? 2) +
         (qualified(true) ?? 0) +
         (qualified(false) ?? 4) +
         (aliased(true) ?? 0);
}
